Fixing overflow bug

--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .intro h1 {
@@ -12,6 +12,7 @@
     margin-top: 3rem;
     font-size: 3rem;
     color: #1c1917;
+    padding: 10px;
 }
 
 .occupation{
@@ -62,6 +63,7 @@
 
 .projects h1 {
     text-align: center;
+    padding: 10px;
 }
 
 .card {
@@ -82,6 +84,8 @@
 .card-title{
     font-size: 30px;
     font-weight: bold;
+    padding-top: 10px;
+    padding-bottom: 8px;
 }
 
 .card-desc{
@@ -97,6 +101,8 @@
 
 
 .history h1{
+    padding: 10px;
+    overflow: hidden;
     text-align: center;
 }
 
